--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="col-md-12">
 		<div class="col-md-8">
 			<img src="images/logo.png" class="headimg">
-			<h1 class="your-customers">Wow Your Customers</h1>
+			<h1 class="your-customers">Wow Your Customer</h1>
 			<h3 class="customer-service">with exceptional customer service</h3>
 		</div>
 		<div class="col-md-4 number">
